--- a/APS/APS/Views/Home/Index.cshtml
+++ b/APS/APS/Views/Home/Index.cshtml
@@ -1,4 +1,85 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model PagedList.IPagedList<APS.Models.Venda>
+@using PagedList.Mvc
+
+@{
+    ViewBag.Title = "Home";
 }
+
+<script src="~/Scripts/jquery-3.2.1.min.js"></script>
+<script>
+    $(document).on("click", ".open-showMotivo", function () {
+        var mymotivoId = $(this).data('id');
+        $(".modal-body #motivoId").val(mymotivoId);
+    });
+</script>
+
+<h2>Documentação do Banco de Dados</h2>
+<div class="modal fade" id="showMotivo">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button class="close" data-dismiss="modal">X</button>
+                    <h3>Descrição</h3>
+                </div>
+                <div class="modal-body">
+                    <textarea disabled name="motivoId" id="motivoId" rows="8" style="width:100%;"></textarea>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="x_panel">
+    <div class="x_title">
+        <h2>Vendas</h2>
+        <ul class="nav navbar-right panel_toolbox">
+            <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
+        </ul>
+        <div class="clearfix"></div>
+    </div> 
+
+    @if (Model.Count > 0)
+    {
+        <div>
+            <div class="table-responsive">
+                <table class="table table-hover table-striped" id="myTable">
+                    <thead>
+                        <tr class="text-center">
+                           
+                            <th>ID Venda</th>
+                            <th>Data</th>
+                            <th>ID Consumidor</th>
+                            <th>Visualizar</th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            
+                            <tr class="text-center">
+                                <td>@Html.DisplayFor(modelItem => item.vendaId)</td>
+                                <td>@Html.DisplayFor(modelItem => item.dataVenda)</td>
+                                <td>@Html.DisplayFor(modelItem => item.consumidorId)</td>
+                                
+                                @*<td style="white-space: initial">@Html.DisplayFor(modelItem => item.descricao)</td>*@
+                                <td><a data-toggle="modal" data-id="@item.vendaId" class="open-showMotivo btn btn-primary" href="#showMotivo"><span class="glyphicon glyphicon-eye-open"></span></a></td>
+                                <td>@Html.DisplayFor(modelItem => item.vendaId)</td>
+                            </tr>
+                            
+                        }
+                    </tbody>
+                </table>
+
+                @if (Model.PageCount > 1)
+                {
+                    ViewBag.tipoConsulta = "Coluna";
+                    <div class="text-center">
+                        @Html.PagedListPager(Model, page => Url.Action("Index", new { pagina = page }))
+                    </div>
+                }
+            </div>
+        </div>
+    }
+</div>
 
