--- a/APS/APS/Views/Home/Index.cshtml
+++ b/APS/APS/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     });
 </script>
 
-<h2>Documentação do Banco de Dados</h2>
+<h2>Vendas pendentes</h2>
 <div class="modal fade" id="showMotivo">
     <div class="modal-dialog">
         <div class="modal-content">
