--- a/APS/APS/Views/Home/Index.cshtml
+++ b/APS/APS/Views/Home/Index.cshtml
@@ -58,13 +58,17 @@
                         {
                             
                             <tr class="text-center">
+
                                 <td>@Html.DisplayFor(modelItem => item.vendaId)</td>
                                 <td>@Html.DisplayFor(modelItem => item.dataVenda)</td>
                                 <td>@Html.DisplayFor(modelItem => item.consumidorId)</td>
                                 
                                 @*<td style="white-space: initial">@Html.DisplayFor(modelItem => item.descricao)</td>*@
-                                <td><a data-toggle="modal" data-id="@item.vendaId" class="open-showMotivo btn btn-primary" href="#showMotivo"><span class="glyphicon glyphicon-eye-open"></span></a></td>
+                                
+                                <td class="glyphicon glyphicon-eye-open">@Html.ActionLink("Detalhes", "Detalhes", new { vendaId = item.vendaId })</td>
+                               
                                 <td>@Html.DisplayFor(modelItem => item.vendaId)</td>
+
                             </tr>
                             
                         }
