--- a/APS/APS/Views/Home/Index.cshtml
+++ b/APS/APS/Views/Home/Index.cshtml
@@ -5,37 +5,9 @@
     ViewBag.Title = "Home";
 }
 
-<script src="~/Scripts/jquery-3.2.1.min.js"></script>
-<script>
-    $(document).on("click", ".open-showMotivo", function () {
-        var mymotivoId = $(this).data('id');
-        $(".modal-body #motivoId").val(mymotivoId);
-    });
-</script>
-
-<h2>Vendas pendentes</h2>
-<div class="modal fade" id="showMotivo">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button class="close" data-dismiss="modal">X</button>
-                    <h3>Descrição</h3>
-                </div>
-                <div class="modal-body">
-                    <textarea disabled name="motivoId" id="motivoId" rows="8" style="width:100%;"></textarea>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <div class="x_panel">
     <div class="x_title">
-        <h2>Vendas</h2>
-        <ul class="nav navbar-right panel_toolbox">
-            <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
-        </ul>
-        <div class="clearfix"></div>
+        <h2>Vendas</h2>       
     </div> 
 
     @if (Model.Count > 0)
@@ -46,10 +18,10 @@
                     <thead>
                         <tr class="text-center">
                            
-                            <th>ID Venda</th>
-                            <th>Data</th>
-                            <th>ID Consumidor</th>
-                            <th>Visualizar</th>
+                            <th class="text-center">ID Venda</th>
+                            <th class="text-center">Data</th>
+                            <th class="text-center">ID Consumidor</th>
+                            <th class="text-center">Visualizar</th>
 
                         </tr>
                     </thead>
@@ -61,14 +33,8 @@
 
                                 <td>@Html.DisplayFor(modelItem => item.vendaId)</td>
                                 <td>@Html.DisplayFor(modelItem => item.dataVenda)</td>
-                                <td>@Html.DisplayFor(modelItem => item.consumidorId)</td>
-                                
-                                @*<td style="white-space: initial">@Html.DisplayFor(modelItem => item.descricao)</td>*@
-                                
-                                <td class="glyphicon glyphicon-eye-open">@Html.ActionLink("Detalhes", "Detalhes", new { vendaId = item.vendaId })</td>
-                               
-                                <td>@Html.DisplayFor(modelItem => item.vendaId)</td>
-
+                                <td>@Html.DisplayFor(modelItem => item.consumidorId)</td>                                                                                                
+                                <td class="btn btn-xs btn-default">@Html.ActionLink("Detalhes", "Detalhes", new { vendaId = item.vendaId })</td>                                                              
                             </tr>
                             
                         }
