Finalização do projeto, porém não está gravado o produto e categoria por falha no serviço

--- a/APS/APS/Views/Shared/_Layout.cshtml
+++ b/APS/APS/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
                                     <a href="@Url.Action("CadastroCategoria", "Produto")">Cadastrar Categoria</a>
                                 </li>
                                 <li>
-                                    <a href="morris.html">Cadastrar Produto</a>
+                                    <a href="@Url.Action("CadastroProduto", "Produto")">Cadastrar Produto</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
