--- a/APS/APS/Views/Home/Detalhes.cshtml
+++ b/APS/APS/Views/Home/Detalhes.cshtml
@@ -25,7 +25,7 @@
             </tr>
 
             @foreach (var item in Model)
-            {
+            {                
                 <tr>
                     <td class="text-center">
                         @Html.DisplayFor(modelItem => item.descricaoProduto)
@@ -38,7 +38,7 @@
                     </td>
                 </tr>
 
-            }
+            }            
 
             @*<td>
 
@@ -47,6 +47,8 @@
             </td>*@
 
         </table>
+
+        <div class="btn btn-default">@Html.ActionLink("Baixar", "Baixar")</div>                                                              
 
         </div>
 
